--- a/Propuesta 2/styles.css
+++ b/Propuesta 2/styles.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    font-family: 'Orbitron', sans-serif;
+    font-family: 'Poppins', sans-serif;
     background-color: #ffffff;
     color: #202e5f;
 }
@@ -170,7 +170,7 @@ body {
 }
 
 section {
-    padding: 80px 20px;
+    padding: 40px 20px;
     text-align: center;
 }
 
@@ -346,6 +346,7 @@ body.dark-mode .navbar {
     background: transparent;
     border: none;
     font-size: 24px;
+    
     cursor: pointer;
     z-index: 999;
     opacity: 1;
